# raspi_os

./: .asm-lsp.toml  .gdbinit  .gitignore  LICENSE.md  Makefile  README.md  justfile  kernel.c  meson.build  raspi0.ini
doc/notes/: main.typ
resources/: create.sh
resources/raspi_zero_files/: config.txt
src/: boot.S  kernel.c
src/arm_runtime/: eabi_rt.c
src/common/hardware/: cpu.S  mini_uart.c  mini_uart.h
src/kernel/: banner.c  boot.S  init.c  init.h  kernel.c  kernel.h  kernel_types.h  linker.ld  syscalls.c  syscalls.h  user_init.S  user_init.c  user_init.h  utils.c  utils.h
src/kernel/elf_loader/: elf_format.h  elf_loader.c  elf_loader.h
src/kernel/hardware/: cpu.S  cpu.h  cpu_modes.inc  gpio.c  gpio.h  interupts.S  interupts.c  interupts.h  io_registers.h  irq.h  mini_uart.c  mini_uart.h  mmio.S  mmio.h  mmu.S  mmu.c  mmu.h  sd_host.c  sd_host.h  sdio.h  system_timer.c  system_timer.h  watchdog.c  watchdog.h
src/kernel/hardware/sd_host/: sd_host.c  sd_host.h  sd_host_internals.h
src/kernel/lib/: eabi_rt.c  fnv_hash.c  fnv_hash.h  hashmap.c  hashmap.h  str.c  str.h
src/kernel/log/: log.c  log.h
src/kernel/memory/: allocator.c  allocator.h  bitfield.c  bitfield.h  memory_allocator.c  memory_allocator.h  section_allocator.c  section_allocator.h  translation_table_allocator.c  translation_table_allocator.h
src/kernel/scheduler/: scheduler.S  scheduler.c  scheduler.h  task_context.h
src/kernel/usermode/: user_init.S  user_init.c  user_init.h  usermode.c  usermode.h  usr_syscalls.S  usr_syscalls.c  usr_syscalls.h
src/kernel/usermode/libc/: dirent.c  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h
src/kernel/vfs/: dentry.h  device_ops.h  driver_registry.c  driver_registry.h  fs_utils.c  fs_utils.h  inode.c  inode.h  super_block.h  vfs.c  vfs.h  vfs_handler.h
src/kernel/vfs/dev/: block_device_file_ops.c  block_device_file_ops.h  ramdisk.c  ramdisk.h  sdcard.c  sdcard.h  tty.c  tty.h  zero.c  zero.h
src/kernel/vfs/filesystems/: fat32_fs.c  fat32_fs.h  ramfs.c
src/kernel/vfs/filesystems/fat32/: fat32_fs.c  fat32_fs.h  fat32_internals.h
src/kernel/vfs/filesystems/ramfs/: ramfs.c  ramfs.h
src/serial_boot/: boot.S  boot.c
src/serial_loader/: boot.S  lib.S  lib.c  lib.h  linker.ld  loader.S  loader.c
src/userland/include/: dirent.h  stdio.h  stdlib.h  string.h  syscalls.h  usr_syscalls.h
src/userland/lib/: dirent.c  stdio.c  stdlib.c  string.c  usr_syscalls.c
src/usermode/include/: kernel_types.h
tools/: bit_range.py  create_blank_fs.sh  create_root_fs.sh  generate_clangd_db.py  mem_table.py  serial_boot.py
